# CPU_SysC

./: config.H  funct.H  opcode.H
ALU/: alu.H  alu.cc  testbench_alu.cc
MEM/: CMakeLists.txt  mem.H  mem.cc  testbench_mem.cc
Register/: CMakeLists.txt  config.H  registerfile.H  registerfile.cc  testbench.cc
